...
                } placeholder: {
                    ProgressView()
                }
                .frame(height: 200)
                
                VStack(alignment: .leading) {
                    Text("Ingredients:")
                        .font(.title2)
                        .padding(.vertical)
                    ForEach(recipe.ingredients, id: \.self) {
                        Text($0)
                    }
                    
                    Text("Instructions:")
                        .font(.title2)
                        .padding(.vertical)
                    ForEach(recipe.instructions, id: \.self) {
                        Text($0)
                    }
                }
...
