...
                    .frame(maxWidth: .infinity, maxHeight: .infinity)
                } else if viewModel.recipes.isEmpty && !viewModel.isLoading {
                    VStack {
                        Image(systemName: "tray.fill")
                            .font(.largeTitle)
                            .foregroundColor(.gray)
                        Text("No Recipes Found.")
                            .foregroundColor(.gray)
                            .padding()
                    }
                    .frame(maxWidth: .infinity, maxHeight: .infinity)
                } else {
                    List {
...
                                Spacer()
                                ProgressView()
                                Spacer()
                            }
                        }
                    }
                    .accessibilityIdentifier("RecipeList")
                    .task {
                        await viewModel.fetchRecipes()
                    }
                    .refreshable {
                        await viewModel.fetchRecipes(reset: true)
                    }
...
